--- a/solokhov-pop-up/src/scss/style.scss
+++ b/solokhov-pop-up/src/scss/style.scss
@@ -200,18 +200,40 @@
   }
 
   &__column {
-    display: flex;
+    // display: flex;
+    // width: 100%;
+    // margin-top: 47px;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // row-gap: 56px;
+    // column-gap: 106px;
+    display: grid;
     width: 100%;
     margin-top: 47px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 56px;
-    column-gap: 106px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 64px;
+    grid-row-gap: 56px;
+    grid-template-areas:
+      "card-1 card-2"
+      "card-3 card-4"
+      "card-3 card-4";
+    @media (max-width: 1499px) {
+    }
+    @media (max-width: 1199px) {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        "card-1"
+        "card-2"
+        "card-3"
+        "card-4";
+      justify-items: center;
+    }
   }
 
   &__card {
-    width: 802px;
-    height: 452px;
+    max-width: 802px;
+    height: max-content;
   }
   &__card-parallelogram-head {
     position: relative;
@@ -255,7 +277,6 @@
 
   &__card-column {
     border: solid 1px #979797;
-    padding: 38px 60px 74px 55px;
     display: flex;
     width: 100%;
   }
@@ -340,6 +361,88 @@
     height: 11px;
   }
 }
+.card-column-1{
+padding: 38px 60px 74px 55px;
+}
+
+.card-column-2{
+padding: 38px 60px 39.5px 55px;
+}
+
+.card-column-3{
+padding: 38px 60px 39px 55px;
+}
+.card-column-4{
+padding: 38px 60px 154.5px 55px;
+}
+
+.card-1 {
+  grid-area: card-1;
+}
+
+.card-2 {
+  grid-area: card-2;
+}
+
+.card-3 {
+  grid-area: card-3;
+}
+
+.card-4 {
+  grid-area: card-4;
+  position: relative;
+  top: -133px;
+  left: 2px;
+  grid-area: card-4;
+}
+
+.placeholder-1 {
+  width: 224px;
+}
+
+.placeholder-2 {
+  width: 272px;
+}
+
+.placeholder-3 {
+  width: 197px;
+}
+
+.placeholder-4 {
+  width: 209px;
+}
+
+.placeholder-5 {
+  width: 186px;
+}
+
+.placeholder-6 {
+  width: 224px;
+}
+
+.placeholder-7 {
+  width: 139px;
+}
+
+.placeholder-8 {
+  width: 163px;
+}
+
+.placeholder-9 {
+  width: 133px;
+}
+
+.placeholder-10 {
+  width: 116px;
+}
+
+.placeholder-11 {
+  width: 93px;
+}
+
+.placeholder-12 {
+  width: 139px;
+}
 
 .button-block {
   display: flex;
@@ -347,43 +450,4 @@
   column-gap: 30px;
   flex-wrap: wrap;
 }
-.card-1 {
-}
-.placeholder-1 {
-  width: 224px;
-}
-.placeholder-2 {
-  width: 272px;
-}
-.placeholder-3 {
-  width: 197px;
-}
-.placeholder-4 {
-  width: 209px;
-}
-.placeholder-5 {
-  width: 186px;
-}
-.placeholder-6 {
-  width: 224px;
-}
-.placeholder-7 {
-  width: 139px;
-}
-.placeholder-8 {
-  width: 163px;
-}
-.placeholder-9 {
-  width: 133px;
-}
-.placeholder-10 {
-  width: 116px;
-}
-.placeholder-11 {
-  width: 93px;
-}
-.placeholder-12 {
-  width: 139px;
-}
-
 /*-------- Main End -------*/
