--- a/solokhov-pop-up/solokhov-pop-up/css/style.css
+++ b/solokhov-pop-up/solokhov-pop-up/css/style.css
@@ -1,36 +1,29 @@
 @charset "UTF-8";
+
 /*-------- Write Fonts Start -------*/
+
 /*-------- Write Fonts End -------*/
+
 /*-------- Import Start -------*/
+
 @font-face {
-  font-family: times;
+  font-family: TimesNewRomanPSBoldMT;
   font-display: swap;
-  src: url("../fonts/times-new-roman-bold-italic.woff") format("woff"), url("../fonts/times-new-roman-bold-italic.woff2") format("woff2");
+  src: url("../fonts/TimesNewRomanPSBoldMT.woff") format("woff"), url("../fonts/TimesNewRomanPSBoldMT.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
-  font-family: times;
+  font-family: TimesNewRomanPSMT;
   font-display: swap;
-  src: url("../fonts/times-new-roman-bold.woff") format("woff"), url("../fonts/times-new-roman-bold.woff2") format("woff2");
+  src: url("../fonts/TimesNewRomanPSMT.woff") format("woff"), url("../fonts/TimesNewRomanPSMT.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
-  font-family: times;
-  font-display: swap;
-  src: url("../fonts/times-new-roman-italic.woff") format("woff"), url("../fonts/times-new-roman-italic.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: times;
-  font-display: swap;
-  src: url("../fonts/times-new-roman.woff") format("woff"), url("../fonts/times-new-roman.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
+
 /*-------- Обнулення -------*/
+
 * {
   padding: 0;
   margin: 0;
@@ -40,8 +33,6 @@
 *,
 *:before,
 *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -121,11 +112,16 @@ h6 {
 }
 
 /*-------- Обнулення -------*/
+
 /*-------- Import End -------*/
+
 /*-------- Page Index Start -------*/
+
 /*-------- All Start -------*/
-* {
-  color: #000000;
+
+::-moz-selection {
+  color: #ffffff;
+  background-color: #000;
 }
 
 ::selection {
@@ -133,21 +129,6 @@ h6 {
   background-color: #000;
 }
 
-.__container {
-  display: none;
-  max-width: 1920px;
-  margin: 0 auto;
-  padding: 46px 39px;
-  background-color: #acacac;
-  opacity: 0;
-  pointer-events: none;
-}
-.__container.active {
-  display: block;
-  opacity: 1;
-  pointer-events: all;
-  transition: 0.5s all;
-}
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -163,63 +144,100 @@ h6 {
 }
 
 /*-------- All End -------*/
+
 /*-------- Main Start -------*/
-.block-button-show-modal {
-  max-width: 1920px;
-  margin: 0 auto;
-  background-color: #ffffff;
+
+.main__container {
   display: flex;
-  height: 100vh;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
-.block-button-show-modal.active {
+
+.main__container.active {
   display: none;
 }
 
-.open-popup {
+.main__button-open-pop-up {
+  display: block;
   height: 34px;
   padding: 9px 10px;
   border-radius: 10px;
   border: solid 1px #979797;
   background-color: #d8d8d8;
-  font-family: times;
-  font-size: 15px;
+  font-family: TimesNewRomanPSMT;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
+  font-size: 15px;
   color: #000;
-  display: block;
 }
-.open-popup.active {
+
+.main__button-open-pop-up.active {
   display: none;
 }
 
-.block-pop-up-modal {
+.main__button-open-pop-up:hover {
+  background-color: #979797;
+  color: #fff;
+}
+
+.__container-1 {
+  max-width: 1920px;
+  margin: 0 auto;
+  background-color: #ffffff;
+}
+
+/*-------- Main End -------*/
+
+/*-------- Pop Up Start -------*/
+
+.__container-2 {
+  padding: 46px 39px;
+  background-color: #acacac;
+}
+
+.pop-up {
+  display: none;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.pop-up.active {
+  display: block;
+  opacity: 1;
+  pointer-events: all;
+  transition: 0.5s all;
+}
+
+.pop-up__bg-container {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.pop-up__dialog {
   max-width: 1842px;
   width: 100%;
   margin: 0 auto;
-}
-.modal {
   background-color: #fff;
   padding: 30px 20px 20px 60px;
   position: relative;
 }
 
-.block-pop-up__title {
+.pop-up__title {
   width: 80%;
   height: 16px;
-}
-.block-pop-up__title-data {
   display: flex;
-  column-gap: 5px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
 }
-.block-pop-up__title-data-tower-title {
-  font-family: times;
+
+.pop-up__data-tower-title {
+  font-family: TimesNewRomanPSMT;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
@@ -227,8 +245,9 @@ h6 {
   color: #000;
   text-decoration: underline;
 }
-.block-pop-up__title-data-tower-sub-title {
-  font-family: times;
+
+.pop-up__data-tower-sub-title {
+  font-family: TimesNewRomanPSMT;
   font-size: 10px;
   font-weight: normal;
   font-stretch: normal;
@@ -238,18 +257,20 @@ h6 {
   color: #acacac;
   text-transform: uppercase;
 }
-.block-pop-up__title-data-square-title {
-  font-family: times;
+
+.pop-up__data-square-title {
+  font-family: TimesNewRomanPSMT;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
   color: #000;
 }
-.block-pop-up__title-data-square-sub-title {
-  font-family: times;
+
+.pop-up__data-square-sub-title {
+  font-family: TimesNewRomanPSMT;
   font-size: 10px;
   font-weight: normal;
   font-stretch: normal;
@@ -259,36 +280,45 @@ h6 {
   color: #acacac;
   text-transform: uppercase;
 }
-.block-pop-up__close {
+
+.pop-up__close {
   position: absolute;
   top: 23px;
   right: 14px;
 }
-.block-pop-up__close:hover {
+
+.pop-up__close:hover {
   cursor: pointer;
 }
-.block-pop-up__column {
+
+.pop-up__close svg:hover {
+  transform: scale(1.1);
+  transition: all 0.5s linear;
+}
+
+.pop-up__row {
+  display: -ms-grid;
   display: grid;
   width: 100%;
   margin-top: 47px;
+  -ms-grid-columns: 1fr 64px 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 64px;
-  grid-row-gap: 56px;
-  grid-template-areas: "card-1 card-2" "card-3 card-4" "card-3 card-4";
+  grid-row-gap: 49px;
+      grid-template-areas: "card-1 card-2" "card-3 card-4" "card-3 card-4";
 }
-@media (max-width: 1199px) {
-  .block-pop-up__column {
-    grid-template-columns: 1fr;
-    grid-template-areas: "card-1" "card-2" "card-3" "card-4";
-    justify-items: center;
-  }
-}
-.block-pop-up__card {
+
+.pop-up__card {
   max-width: 802px;
+  width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
 }
-.block-pop-up__card-parallelogram-head {
+
+.pop-up__tabs {
   position: relative;
   top: 1px;
   display: inline-flex;
@@ -299,10 +329,12 @@ h6 {
   height: 53px;
   z-index: 1;
 }
-.block-pop-up__card-parallelogram-head::before {
+
+.pop-up__tabs::before {
   border: solid 1px #979797;
 }
-.block-pop-up__card-parallelogram-head::before {
+
+.pop-up__tabs::before {
   content: "";
   position: absolute;
   top: 0;
@@ -315,8 +347,9 @@ h6 {
   transform: perspective(1.5em) rotateX(2deg);
   transform-origin: bottom left;
 }
-.block-pop-up__card-title {
-  font-family: times;
+
+.pop-up__tabs-title {
+  font-family: TimesNewRomanPSBoldMT;
   font-size: 15px;
   font-weight: bold;
   font-stretch: normal;
@@ -325,18 +358,67 @@ h6 {
   letter-spacing: normal;
   color: #000;
 }
-.block-pop-up__card-column {
+
+.pop-up__row-card {
   border: solid 1px #979797;
   display: flex;
   width: 100%;
+  justify-content: space-between;
 }
-.block-pop-up__card-column-button {
+
+.pop-up__card-list-1 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  row-gap: 22px;
+  font-family: TimesNewRomanPSMT;
+  font-size: 15px;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #000;
+}
+
+.pop-up__placeholder {
+  background-color: #d8d8d8;
+  height: 11px;
+}
+
+.pop-up__card-list-2 {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  row-gap: 22px;
+  font-family: TimesNewRomanPSBoldMT;
+  font-size: 15px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #000;
+}
+
+.row-card-groups {
+  display: flex;
+  row-gap: 22px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
+.row-card-groups__item {
   height: 34px;
   padding: 9px 10px;
   border-radius: 10px;
   border: solid 1px #979797;
   background-color: #d8d8d8;
-  font-family: times;
+  font-family: TimesNewRomanPSMT;
   font-size: 15px;
   font-weight: normal;
   font-stretch: normal;
@@ -344,91 +426,60 @@ h6 {
   line-height: normal;
   letter-spacing: normal;
   color: #000;
-}
-.block-pop-up__card-column-data {
-  text-align: left;
-  flex: 0 0 50%;
-  font-family: times;
-  font-size: 15px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000;
-}
-.block-pop-up__card-column-data-count-square {
-  margin-top: 22px;
-}
-.block-pop-up__card-column-data-count-auto {
-  margin-top: 22px;
-}
-.block-pop-up__card-column-data-placeholder {
-  margin-top: 22px;
-  background-color: #d8d8d8;
-  height: 11px;
-}
-.block-pop-up__card-column-user-data {
-  flex: 0 0 50%;
-  font-family: times;
-  font-size: 15px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.block-pop-up__card-column-user-data-count-square {
-  margin-top: 22px;
-}
-.block-pop-up__card-column-userdata-count-auto {
-  margin-top: 22px;
-}
-.block-pop-up__card-column-user-data-placeholder {
-  margin-top: 22px;
-  background-color: #d8d8d8;
-  height: 11px;
 }
 
-.card-column-1 {
+.row-card-1 {
   padding: 38px 60px 74px 55px;
 }
 
-.card-column-2 {
-  padding: 38px 60px 39.5px 55px;
+.row-card-2 {
+  padding: 38px 60px 33.5px 55px;
 }
 
-.card-column-3 {
+.row-card-3 {
   padding: 38px 60px 39px 55px;
 }
 
-.card-column-4 {
-  padding: 38px 60px 154.5px 55px;
+.row-card-4 {
+  padding: 29px 60px 154.5px 49px;
 }
 
 .card-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
   grid-area: card-1;
 }
 
 .card-2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   grid-area: card-2;
 }
 
 .card-3 {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
   grid-area: card-3;
 }
 
 .card-4 {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 3;
   grid-area: card-4;
   position: relative;
-  top: -133px;
+  top: -129px;
   left: 2px;
   grid-area: card-4;
+}
+
+.card-2-list-1 {
+  row-gap: 20px !important;
+}
+
+.card-2-list-2 {
+  row-gap: 20px !important;
 }
 
 .placeholder-1 {
@@ -479,11 +530,90 @@ h6 {
   width: 139px;
 }
 
-.button-block {
-  display: flex;
-  row-gap: 20px;
-  column-gap: 30px;
-  flex-wrap: wrap;
+.placeholder-13 {
+  width: 209px;
 }
 
-/*-------- Main End -------*/
+.placeholder-14 {
+  width: 186px;
+}
+
+.placeholder-15 {
+  width: 224px;
+}
+
+.placeholder-16 {
+  width: 272px;
+}
+
+.placeholder-17 {
+  width: 116px;
+}
+
+.placeholder-18 {
+  width: 93px;
+}
+
+.placeholder-19 {
+  width: 139px;
+}
+
+.placeholder-20 {
+  width: 163px;
+}
+
+/*-------- Pop Up End -------*/
+
+/*-------- Page Index End -------*/
+
+@media (max-width: 1499px) {
+  .pop-up__row {
+    grid-column-gap: 44px;
+  }
+
+  .pop-up__row-card {
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+  }
+}
+
+@media (max-width: 1399px) {
+  .pop-up__row {
+    justify-content: flex-end;
+  }
+
+  .pop-up__card-list-1 {
+    justify-content: flex-end;
+  }
+
+  .pop-up__card-list-2 {
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 1199px) {
+  .pop-up__row {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+        grid-template-areas: "card-1" "card-2" "card-3" "card-4";
+    justify-items: center;
+  }
+  .card-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .card-2 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+  .card-3 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+  }
+  .card-4 {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+  }
+}
