--- a/solokhov-pop-up/src/scss/_fonts.scss
+++ b/solokhov-pop-up/src/scss/_fonts.scss
@@ -1,28 +1,14 @@
 @font-face {
-	font-family: times;
+	font-family: TimesNewRomanPSBoldMT;
 	font-display: swap;
-	src: url("../fonts/times-new-roman-bold-italic.woff") format("woff"), url("../fonts/times-new-roman-bold-italic.woff2") format("woff2");
+	src: url("../fonts/TimesNewRomanPSBoldMT.woff") format("woff"), url("../fonts/TimesNewRomanPSBoldMT.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
 	}
 @font-face {
-	font-family: times;
+	font-family: TimesNewRomanPSMT;
 	font-display: swap;
-	src: url("../fonts/times-new-roman-bold.woff") format("woff"), url("../fonts/times-new-roman-bold.woff2") format("woff2");
-	font-weight: 400;
-	font-style: normal;
-	}
-@font-face {
-	font-family: times;
-	font-display: swap;
-	src: url("../fonts/times-new-roman-italic.woff") format("woff"), url("../fonts/times-new-roman-italic.woff2") format("woff2");
-	font-weight: 400;
-	font-style: normal;
-	}
-@font-face {
-	font-family: times;
-	font-display: swap;
-	src: url("../fonts/times-new-roman.woff") format("woff"), url("../fonts/times-new-roman.woff2") format("woff2");
+	src: url("../fonts/TimesNewRomanPSMT.woff") format("woff"), url("../fonts/TimesNewRomanPSMT.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
 	}
